--- a/.github/workflows/issue-labeler.yml
+++ b/.github/workflows/issue-labeler.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           template-path: .github/ISSUE_TEMPLATE/bug_report.yaml
 
-      - name: Set labels based on severity field
+      - name: Set issue labels
         uses: redhat-plumbers-in-action/advanced-issue-labeler@v3
         with:
           issue-form: ${{ steps.issue-parser.outputs.jsonString }}
