--- a/docs/book.toml
+++ b/docs/book.toml
@@ -4,7 +4,7 @@ language = "en"
 multilingual = false
 src = "src"
 title = "carapace"
-description = "A multi-shell completion library. Supports Bash, Elvish, Fish, Nushell, Oil, Powershell, Xonsh and Zsh."
+description = "A multi-shell completion library."
 
 [output.html]
 default-theme = "Latte"
