--- a/.github/workflows/vhs.yml
+++ b/.github/workflows/vhs.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: example
-          path: /home/carapce/go/bin/example
+          path: /root/go/bin/example
           retention-days: 1
 
   word:
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: example
-          path: /home/carapce/go/bin/example
+          path: /root/go/bin/example
 
       - name: word
         run: | 
@@ -54,7 +54,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: example
-          path: /home/carapce/go/bin/example
+          path: /root/go/bin/example
 
       - name: nospace
         run: | 
