--- a/.github/workflows/vhs.yml
+++ b/.github/workflows/vhs.yml
@@ -18,6 +18,8 @@ jobs:
           go install
           whoami
           pwd
+          go env
+          ls /root/go/bin/
 
       - uses: actions/upload-artifact@v4
         with:
