--- a/.github/workflows/vhs.yml
+++ b/.github/workflows/vhs.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: example
-          path: /usr/local/bin/example
+          path: /usr/local/bin/
 
       - name: word
         run: | 
@@ -52,7 +52,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: example
-          path: /usr/local/bin/example
+          path: /usr/local/bin/
 
       - name: nospace
         run: | 
