--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,11 +1,34 @@
 name: Doc
 
 on:
+  pull_request:
   push:
     branches:
       - 'master'
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: shallow clone
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22.0'
+
+      - name: build
+        run: |
+          cd example
+          go build
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: example
+          path: example/example
+          retention-days: 1
+  
   doc:
     runs-on: ubuntu-latest
     container: ghcr.io/carapace-sh/carapace
