--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -26,6 +26,18 @@ jobs:
           name: example
           path: example/example
           retention-days: 1
+
+  word:
+    needs: build
+    uses: ./.github/workflows/vhs-template.yml
+    with:
+      topic: word
+
+  nospace:
+    needs: build
+    uses: ./.github/workflows/vhs-template.yml
+    with:
+      topic: nospace
   
   doc:
     runs-on: ubuntu-latest
