--- a/.github/workflows/vhs-template.yml
+++ b/.github/workflows/vhs-template.yml
@@ -26,3 +26,9 @@ jobs:
         run: | 
           cd docs/src/development/vhs/${{ inputs.topic }}
           ls *.tape | xargs -n1 vhs
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: vhs-${{ inputs.topic }}
+          path: docs/src/development/vhs/${{ inputs.topic }}
+          retention-days: 1
