--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -38,11 +38,18 @@ jobs:
     uses: ./.github/workflows/vhs-template.yml
     with:
       topic: nospace
+
+  doubleQuote:
+    needs: build
+    uses: ./.github/workflows/vhs-template.yml
+    with:
+      topic: doubleQuote
   
   doc:
     needs:
       - word
       - nospace
+      - doubleQuote
     runs-on: ubuntu-latest
     container: ghcr.io/carapace-sh/carapace
     steps:
@@ -56,11 +63,15 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: vhs-word
-          path: docs/src/development/vhs/word
+          path: docs/src/development/vhs/word/out
       - uses: actions/download-artifact@v4
         with:
           name: vhs-nospace
-          path: docs/src/development/vhs/nospace
+          path: docs/src/development/vhs/nospace/out
+      - uses: actions/download-artifact@v4
+        with:
+          name: vhs-doubleQuote
+          path: docs/src/development/vhs/doubleQuote/out
           
 
       - name: "build docs"
