--- a/.github/workflows/vhs-template.yml
+++ b/.github/workflows/vhs-template.yml
@@ -30,5 +30,5 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: vhs-${{ inputs.topic }}
-          path: docs/src/development/vhs/${{ inputs.topic }}
+          path: docs/src/development/vhs/${{ inputs.topic }}/out
           retention-days: 1
