--- a/.github/workflows/vhs-template.yml
+++ b/.github/workflows/vhs-template.yml
@@ -27,6 +27,10 @@ jobs:
           cd docs/src/development/vhs/${{ inputs.topic }}
           ls *.tape | xargs -n1 vhs
 
+      - name: check
+        run: |
+          [ -z "$(git status --porcelain)" ] # clean workspace unless .ascii files changed
+
       - uses: actions/upload-artifact@v4
         with:
           name: vhs-${{ inputs.topic }}
