--- a/.github/workflows/vhs-template.yml
+++ b/.github/workflows/vhs-template.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: check
         run: |
+          git status --porcelain
           [ -z "$(git status --porcelain)" ] # clean workspace unless .ascii files changed
 
       - uses: actions/upload-artifact@v4
