--- a/.github/workflows/vhs-template.yml
+++ b/.github/workflows/vhs-template.yml
@@ -30,7 +30,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: vhs-${{ inputs.topic }}
+          name: ${{ inputs.topic }}
           path: docs/src/development/vhs/${{ inputs.topic }}/out/
           retention-days: 1
 
