--- a/.github/workflows/vhs-template.yml
+++ b/.github/workflows/vhs-template.yml
@@ -31,7 +31,9 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.topic }}
-          path: docs/src/development/vhs/${{ inputs.topic }}/out/
+          path: |
+            docs/src/development/vhs/${{ inputs.topic }}/
+            !docs/src/development/vhs/${{ inputs.topic }}/*.tape
           retention-days: 1
 
       - name: check
