vhs: added redirect

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -32,6 +32,7 @@ jobs:
   nospace:     {needs: build, uses: ./.github/workflows/vhs-template.yml, with: {topic: nospace}}
   doubleQuote: {needs: build, uses: ./.github/workflows/vhs-template.yml, with: {topic: doubleQuote}}
   singleQuote: {needs: build, uses: ./.github/workflows/vhs-template.yml, with: {topic: singleQuote}}
+  redirect:    {needs: build, uses: ./.github/workflows/vhs-template.yml, with: {topic: redirect}}
 
   doc:
     needs:
