vhs: added escape

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -34,6 +34,7 @@ jobs:
   doubleQuoteOpen: {needs: build, uses: ./.github/workflows/vhs-template.yml, with: {topic: doubleQuoteOpen}}
   singleQuote:     {needs: build, uses: ./.github/workflows/vhs-template.yml, with: {topic: singleQuote}}
   singleQuoteOpen: {needs: build, uses: ./.github/workflows/vhs-template.yml, with: {topic: singleQuoteOpen}}
+  escape:          {needs: build, uses: ./.github/workflows/vhs-template.yml, with: {topic: escape}}
   redirect:        {needs: build, uses: ./.github/workflows/vhs-template.yml, with: {topic: redirect}}
 
   doc:
