vhs: fix nushell

--- a/compose.yaml
+++ b/compose.yaml
@@ -106,6 +106,6 @@ services:
     volumes:
       - '.:/carapace/'
     working_dir: /carapace/docs/src/development/vhs
-    command: bash --login -c "ls -d */ | xargs -I'{}' bash -c \"cd {};ls *.tape | xargs -n1 vhs\""
+    command: bash -c "ln -s /carapace/example/example /usr/local/bin/example && ls -d */ | xargs -I'{}' bash -c \"cd {};ls *.tape | xargs -n1 vhs\""
     env_file:
       - .github/workflows/vhs.env
