--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -52,7 +52,7 @@ jobs:
       - escape
       - redirect
     runs-on: ubuntu-latest
-    container: ghcr.io/carapace-sh/carapace
+    container: ghcr.io/carapace-sh/mdbook
     steps:
       - uses: actions/checkout@v4
 
