--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,6 +42,35 @@ jobs:
       - name: "Check formatting"
         run: '[ "$(gofmt -d -s . | tee -a /dev/stderr)" = "" ]'
 
+      - uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: |
+            unit.cov
+            integration.cov
+          retention-days: 1
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+  coveralls:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: shallow clone
+        uses: actions/checkout@v5
+
+      - uses: actions/download-artifact@v5
+        with:
+          name: coverage
+
       - uses: shogo82148/actions-goveralls@v1
         with:
           path-to-profile: unit.cov
@@ -55,12 +84,3 @@ jobs:
       - uses: shogo82148/actions-goveralls@v1
         with:
           parallel-finished: true
-
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v6
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          version: latest
-          args: release --clean
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
